fixed spacing  issue on last row  of index page

--- a/app/assets/stylesheets/index_page.scss
+++ b/app/assets/stylesheets/index_page.scss
@@ -48,13 +48,18 @@
 .flex-recipe-grid {
   background-color: white;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   flex-wrap: wrap;
   padding: 0px;
   width: 100%;
   flex-grow: 1;
-  margin-left: 3vh;
+  // margin-left: 3vh;
   // background-color: blue;
+}
+
+.flex-recipe-grid::after {
+  content: '';
+  flex: auto;
 }
 
 .index-recipe-grid {
@@ -76,8 +81,8 @@
   // height: 210px;
   display: block;
   position: relative;
-  margin-right: 7.5px;
-  margin-left: 7.5px;
+  margin-right: 2.5px;
+  margin-left: 2.5px;
 
 }
 
@@ -361,8 +366,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 11vw;
-  padding-right: 5vw;
+  // padding-left: 11vw;
+  // padding-right: 5vw;
   align-self: center;
   margin: auto;
+  width: 63%;
 }
